--- a/index.html
+++ b/index.html
@@ -494,10 +494,7 @@
                 </div>
             </div>
         </div>
-    </div
-        <div class="container">
-        <h2 class="text-center mb-5">Certificates</h2>
-        <div class="row">
+    </div>
             <div class="col-md-6 mb-5">
                 <div class="certificate-item p-4 border">
                     <div class="certificate-img-container">
@@ -508,6 +505,7 @@
                     </div>
                 </div>
             </div>
+</div>
 </section>
 
 <section id="Acco" class="pt-5 pb-5">
