--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             <div class="col-md-6 mb-5">
                 <div class="certificate-item p-4 border">
                     <div class="certificate-img-container">
-                        <img src="img/cert.jpg" alt="Certificate 3" class="img-fluid">
+                        <img src="img/certi.jpg" alt="Certificate 3" class="img-fluid">
                         <div class="overlay">
                             <div class="text">LiLoLeLe Teambuilding at ANJOWORLD<br>Completed: 07 Jun 2024</div>
                         </div>
