--- a/index.html
+++ b/index.html
@@ -421,13 +421,15 @@
 <section id="home" style="background-image: url('img/background.jpg');">
     <div class="content">
         <div class="container text-center text-white">
-            <img src="img/profile.jpg" alt="Profile Picture" class="profile-pic mb-4">
+            <img src="img/jay.jpg" alt="Profile Picture" class="profile-pic mb-4">
             <h1 class="display-4 font-weight-bold">Francis Jay Rotol</h1>
             <p class="lead font-italic">IT Specialist | Tech Enthusiast | Success Driven</p>
             <p class="font-italic">"Striving for success in all aspects of life"</p>
+            <a href="path/to/your/resume.pdf" class="btn btn-primary mt-3" download>Download Resume</a>
         </div>
     </div>
 </section>
+
 <section id="Edu">
     <div class="container">
         <h2 class="text-center">Education</h2>
