--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 <section id="home" style="background-image: url('img/background.jpg');">
     <div class="content">
         <div class="container text-center text-white">
-            <img src="img/jay.jpg" alt="Profile Picture" class="profile-pic mb-4">
+            <img src="img/pro.jpg" alt="Profile Picture" class="profile-pic mb-4">
             <h1 class="display-4 font-weight-bold">Francis Jay Rotol</h1>
             <p class="lead font-italic">IT Specialist | Tech Enthusiast | Success Driven</p>
             <p class="font-italic">"Striving for success in all aspects of life"</p>
