--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <h1 class="display-4 font-weight-bold">Francis Jay Rotol</h1>
             <p class="lead font-italic">IT Specialist | Tech Enthusiast | Success Driven</p>
             <p class="font-italic">"Striving for success in all aspects of life"</p>
-            <a href="path/to/your/resume.pdf" class="btn btn-primary mt-3" download>Download Resume</a>
+            <a href="img/jay7.pdf" class="btn btn-primary mt-3" download>Download Resume</a>
         </div>
     </div>
 </section>
