--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
         <div class="row justify-content-center">
           <div class="col-md-2 mb-4">
             <div class="image-container">
-              <img src="img/jay.jpg" alt="Image 1" class="img-fluid rounded shadow">
+              <img src="img/cctv.jpg" alt="Image 1" class="img-fluid rounded shadow">
               <div class="overlay">
                 <div class="text">CCTV<br>INSTALLATION</div>
               </div>
