--- a/index.html
+++ b/index.html
@@ -531,6 +531,18 @@
             </div>
         </div>
     </div>
+     <div class="col-md-6 mb-5">
+                <div class="certificate-item p-4 border">
+                    <div class="certificate-img-container">
+                        <img src="img/COC.jpg" alt="Certificate 3" class="img-fluid">
+                        <div class="overlay">
+                            <div class="text">LiLoLeLe Teambuilding at ANJOWORLD<br>Completed: 07 Jun 2024</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section id="Acco" class="pt-5 pb-5">
