--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             border-radius: 5px;
         }
         .container {
-    max-width: 1200px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -531,12 +531,15 @@
             </div>
         </div>
     </div>
-     <div class="col-md-6 mb-5">
+     <div class="container">
+        <h2 class="text-center mb-5">Certificates</h2>
+        <div class="row">
+            <div class="col-md-6 mb-5">
                 <div class="certificate-item p-4 border">
                     <div class="certificate-img-container">
-                        <img src="img/COC.jpg" alt="Certificate 3" class="img-fluid">
+                        <img src="img/COC.jpg" alt="Certificate 1" class="img-fluid">
                         <div class="overlay">
-                            <div class="text">LiLoLeLe Teambuilding at ANJOWORLD<br>Completed: 07 Jun 2024</div>
+                            <div class="text">Certificate of Completion <br>Completed: 30 Jun 2024</div>
                         </div>
                     </div>
                 </div>
