--- a/index.html
+++ b/index.html
@@ -98,90 +98,55 @@
                 font-size: 1rem;
             }
         }
-        .certificate-section {
-            padding: 60px 0;
-            background-color: #f8f9fa;
-        }
-
-        .certificate-section h2 {
-            font-size: 3rem;
-            margin-bottom: 40px;
-            text-align: center;
-            font-family: 'Courier New', Courier, monospace;
-            color: #333;
-            position: relative;
-        }
-
-        .certificate-section h2::before {
-            content: "</>";
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: -20px;
-            color: #333;
-            font-size: 2rem;
-        }
-
-        .certificate-item {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
-            padding: 20px;
-            text-align: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .certificate-item:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .certificate-title {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-            color: #333;
-            font-weight: bold;
-        }
-
-        .certificate-date {
-            font-size: 1rem;
-            margin-bottom: 20px;
-            color: #666;
-        }
-
-        .certificate-img img {
-            width: auto;
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+.certificate-section {
+    padding: 60px 0;
+    background-color: #f8f9fa;
 }
 
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.col-md-4 {
+.certificate-section h2 {
+    font-size: 3rem;
+    margin-bottom: 40px;
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    color: #333;
     position: relative;
-    width: 30%;
-    margin: 1%;
 }
 
-.img-fluid {
+.certificate-section h2::before {
+    content: "</>";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -20px;
+    color: #333;
+    font-size: 2rem;
+}
+
+.certificate-item {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+    padding: 20px;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.certificate-item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.certificate-img-container {
+    position: relative;
+}
+
+.certificate-img-container img {
     width: 100%;
     height: auto;
     display: block;
-}
-
-.image-container {
-    position: relative;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .overlay {
@@ -198,13 +163,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
 }
 
-.image-container:hover .overlay {
+.certificate-img-container:hover .overlay {
     opacity: 1;
 }
 
-.text {
+.overlay .text {
     color: white;
     font-size: 20px;
     text-align: center;
@@ -529,14 +495,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-                <div class="col-md-6 mb-5">
+            <div class="col-md-6 mb-5">
                 <div class="certificate-item p-4 border">
                     <div class="certificate-img-container">
-                        <img src="img/COC.jpg" alt="Certificate 3" class="img-fluid">
+                        <img src="img/COC.jpg" alt="Certificate 4" class="img-fluid">
                         <div class="overlay">
-                            <div class="text">Certificate of Completion<br>Completed: 30 Jun 2024</div>
+                            <div class="text">Certificate of Completion <br>Completed: 30 Jun 2024</div>
                         </div>
                     </div>
                 </div>
@@ -544,6 +508,7 @@
         </div>
     </div>
 </section>
+
 
 <section id="Acco" class="pt-5 pb-5">
     <div class="container">
