--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 text-center">
-          <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSwUMDTzqUgDh4YRm8DlhDBSVSQWhPYeN-oDeVcixA6LUz3-Lmuw6Z2mGptgWoPCgmxrJQ8NcdV6udV/pubhtml?gid=246184847&amp;single=true&amp;widget=true&amp;headers=false" frameborder="5" width="100%" height="400"></iframe>
+          <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSwUMDTzqUgDh4YRm8DlhDBSVSQWhPYeN-oDeVcixA6LUz3-Lmuw6Z2mGptgWoPCgmxrJQ8NcdV6udV/pubhtml" frameborder="5" width="100%" height="400"></iframe>
         </div>
       </div>
     </div>
