--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                         </li>
                     </ul>
                     <div class="text-center mt-4">
-                        <a href="mailto:rotoljay03@gmail.com" class="btn btn-primary">Send Message</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" onclick="composeEmail()" >Send Message</a>
                     </div>
                 </div>
             </div>
