--- a/index.html
+++ b/index.html
@@ -382,79 +382,81 @@
     transform: scale(1.05); /* Slightly enlarge the button on hover */
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1); /* Subtle shadow on hover */
 }
-        .contact-section {
-    padding: 60px 0;
-    background-color: #f8f9fa;
-}
+          .contact-section {
+            padding: 60px 0;
+            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            color: white;
+        }
 
-.contact-section h2 {
-    font-size: 2.5rem;
-    margin-bottom: 40px;
-    text-align: center;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    color: #333;
-    position: relative;
-}
+        .contact-section h2 {
+            font-size: 2.5rem;
+            margin-bottom: 40px;
+            text-align: center;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            color: white;
+            position: relative;
+        }
 
-.contact-info {
-    background-color: #ffffff;
-    border-radius: 8px;
-    padding: 30px;
-    border: 1px solid #e0e0e0;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+        .contact-info {
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 8px;
+            padding: 30px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
 
-.contact-info ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
+        .contact-info ul {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        }
 
-.contact-info ul li {
-    font-size: 1.1rem;
-    display: flex;
-    align-items: center;
-}
+        .contact-info ul li {
+            font-size: 1.1rem;
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+            color: #333;
+        }
 
-.contact-info ul li i {
-    margin-right: 10px;
-    color: #007bff;
-}
+        .contact-info ul li i {
+            margin-right: 10px;
+            color: #ff7e5f;
+        }
 
-.contact-info ul li strong {
-    margin-right: 5px;
-}
+        .contact-info ul li strong {
+            margin-right: 5px;
+        }
 
-.contact-info a {
-    color: #007bff;
-    text-decoration: none;
-}
+        .contact-info a {
+            color: #ff7e5f;
+            text-decoration: none;
+        }
 
-.contact-info a:hover {
-    text-decoration: underline;
-}
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
 
-.btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
-    padding: 10px 20px;
-    font-size: 1rem;
-    border-radius: 50px;
-    text-transform: uppercase;
-    transition: background-color 0.3s ease;
-}
+        .btn-primary {
+            background-color: #ff7e5f;
+            border-color: #ff7e5f;
+            padding: 10px 20px;
+            font-size: 1rem;
+            border-radius: 30px;
+            text-transform: uppercase;
+            transition: background-color 0.3s ease;
+            cursor: pointer;
+            color: #fff;
+            text-decoration: none;
+            display: inline-block;
+        }
 
-.btn-primary:hover {
-    background-color: #0056b3;
-}
+        .btn-primary:hover {
+            background-color: #feb47b;
+        }
 
-.shadow-sm {
-    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
-}
-
-
-
-
+        .shadow-sm {
+            box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
+        }
     </style>
 </head>
 <body>
@@ -739,7 +741,7 @@
       </div>
     </div>
 </section>
-<section id="ContactInformation" class="contact-section pt-5 pb-5">
+<section id="Contact" class="contact-section pt-5 pb-5">
     <div class="container">
         <h2 class="text-center mb-5">Contact Information</h2>
         <div class="row justify-content-center">
