--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         }
 
         .contact-info {
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color:gray;
             border-radius: 8px;
             padding: 30px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
