--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 }
           .contact-section {
             padding: 60px 0;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            background: white;
             color: white;
         }
 
@@ -398,7 +398,7 @@
         }
 
         .contact-info {
-            background-color:gray;
+            background-color:white;
             border-radius: 8px;
             padding: 30px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
