--- a/index.html
+++ b/index.html
@@ -750,27 +750,27 @@
                     <ul class="list-unstyled">
                         <li class="mb-3">
                             <i class="fas fa-envelope"></i> 
-                            <strong>Email:</strong> <a href="mailto:rotoljay03@gmail.com">rotoljay03@gmail.com</a>
+                            <strong>Email:</strong> <a href="mailto:rotoljay03@gmail.com"target="blank">rotoljay03@gmail.com</a>
                         </li>
                         <li class="mb-3">
                             <i class="fas fa-phone"></i> 
-                            <strong>Phone:</strong> <a href="tel:+639512352816">+63 9512352816</a>
+                            <strong>Phone:</strong> <a href="tel:+639512352816"target="blank">+63 9512352816</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-facebook"></i> 
-                            <strong>Facebook:</strong> <a href="https://www.facebook.com/rotoljay03">Francis Jay Rotol</a>
+                            <strong>Facebook:</strong> <a href="https://www.facebook.com/rotoljay03"target="blank">Francis Jay Rotol</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-instagram"></i> 
-                            <strong>Instagram:</strong> <a href="https://www.instagram.com/francisjaydrotol">Francis Jay D. Rotol</a>
+                            <strong>Instagram:</strong> <a href="https://www.instagram.com/francisjaydrotol"target="blank">Francis Jay D. Rotol</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-whatsapp"></i> 
-                            <strong>WhatsApp:</strong> <a href="https://wa.me/639512352816">+629512352816</a>
+                            <strong>WhatsApp:</strong> <a href="https://wa.me/639512352816" target="blank">+629512352816</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-viber"></i> 
-                            <strong>Viber:</strong> <a href="viber://add?number=639512352816">+629512352816</a>
+                            <strong>Viber:</strong> <a href="viber://add?number=639512352816" target="blank">+629512352816</a>
                         </li>
                     </ul>
                     <div class="text-center mt-4">
