--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@
 .certificate-img-container {
     position: relative;
 }
-
+.image-container:hover .overlay {
+    opacity: 1;
+}
 .img-fluid {
     width: 100%;
     height: auto;
