--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-facebook"></i> 
-                            <strong>Facebook:</strong> <a href="https://www.facebook.com/rotoljay03"target="blank">Francis Jay Rotol</a>
+                            <strong>Facebook:</strong> <a href="https://www.facebook.com/jayrotol05"target="blank">Francis Jay Rotol</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-instagram"></i> 
