--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-instagram"></i> 
-                            <strong>Instagram:</strong> <a href="https://www.instagram.com/francisjaydrotol"target="blank">Francis Jay D. Rotol</a>
+                            <strong>Instagram:</strong> <a href="https://www.instagram.com/jay.rtl/"target="blank">Francis Jay D. Rotol</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-whatsapp"></i> 
