--- a/index.html
+++ b/index.html
@@ -565,6 +565,16 @@
                     </div>
                 </div>
             </div>
+ <div class="col-md-6 mb-5">
+                <div class="certificate-item p-4 border">
+                    <div class="certificate-img-container">
+                        <img src="img/Comptia.jpg" alt="Certificate 1" class="img-fluid">
+                        <div class="overlay">
+                            <div class="text">Cisco CCNA7: Switching, Routing, and Wireless Essentials<br>Completed: 29 Oct 2022</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-6 mb-5">
                 <div class="certificate-item p-4 border">
                     <div class="certificate-img-container">
