--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                     <div class="certificate-img-container">
                         <img src="img/Comptia.jpg" alt="Certificate 1" class="img-fluid">
                         <div class="overlay">
-                            <div class="text">Cisco CCNA7: Switching, Routing, and Wireless Essentials<br>Completed: 29 Oct 2022</div>
+                            <div class="text">Comptia Network<br>Completed: January 2025</div>
                         </div>
                     </div>
                 </div>
