--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <h1 class="display-4 font-weight-bold">Francis Jay Rotol</h1>
             <p class="lead font-italic">IT Specialist | Tech Enthusiast | Success Driven</p>
             <p class="font-italic">"Striving for success in all aspects of life"</p>
-            <a href="https://github.com/jay-rtl/Porfolio-Jay/raw/main/rename.pdf" class="custom-download-btn mt-3" download>Download Resume</a>
+            <a href="https://github.com/jay-rtl/Porfolio-Jay/raw/main/resume.docx" class="custom-download-btn mt-3" download>Download Resume</a>
         </div>
     </div>
 </section>
